fix images  not showing in windows desktop

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,7 @@ body {
     background-color: #000;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
     /* background-image: url("https://unsplash.com/photos/grayscale-photo-of-building-Q518TADE3Ns"); */
 }
 
